--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="description" content="SHTU Open Source Mirror" />
     <title>SHTU Open Source Mirror</title>
   </head>
   <body>
