--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="description" content="SHTU Open Source Mirror" />
     <title>SHTU Open Source Mirror</title>
