--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="description" content="SHTU Open Source Mirror" />
-    <title>SHTU Open Source Mirror</title>
+    <title>Geekpie Open Source Mirror</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
