Fix: Homepage api link and link color

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <meta name="description" content="SHTU Open Source Mirror" />
+    <meta name="description" content="Geekpie Open Source Mirror" />
     <title>Geekpie Open Source Mirror</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to access our website.</noscript>
     <div id="root"></div>
   </body>
 </html>
