New: Use API v2 in Explorer

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Geekpie Open Source Mirror" />
-    <title>Geekpie Open Source Mirror</title>
+    <meta name="description" content="Geekpie Open Source Mirror - 上海科技大学开源镜像站" />
+    <title>Geekpie Open Source Mirror - 上海科技大学开源镜像站</title>
   </head>
   <body>
     <div id="root"></div>
